--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-<form
-  action="https://formspree.io/f/mbjqokey"
-  method="POST"
->
+<form action="https://formspree.io/f/mbjqokey" method="POST">
+
+    <label>*Name : </label>
+    <input type="text", id="name", placeholder="please enter your name" name="name">
   <label>
     Your email:
     <input type="email" name="_replyto">
